Let me analyze the diff to understand the changes and generate an appropriate conventional commit message.
Looking at the changes:

1. **CHANGELOG.md** - Significant updates to the changelog including:
   - Fixed section about test skip reasons and improvements
   - Documentation about test architecture limitations
   - Jest mock setting improvements
   - Test coverage improvements (463 tests passing)
   - Version info update to [2.4.0]

2. **_locales/en/messages.json and _locales/ja/messages.json** - Translation updates:
   - Split `confirmContentDesc` into two separate keys (removed HTML markup)
   - Added `confirmContentNote` key
   - Fixed `items` key to use proper separators (", " for EN, "、" for JA)
   - Added missing `updateError` key in Japanese

3. **jest.setup.js** - Updated mock to match new i18n structure

4. **src/background/__tests__/recordingLogic.test.js** - Test updated to expect `DOMAIN_BLOCKED` error code instead of Japanese text

5. **src/background/recordingLogic.js** - Changed hardcoded Japanese error message to `DOMAIN_BLOCKED` error code

6. **src/popup/__tests__/domainFilter.test.js** - Major test rework:
   - Removed old skip reasons
   - Added comprehensive mocks
   - Added 5 tests for domain filter functionality
   - Documented architecture limitations (DOM caching)

7. **src/popup/__tests__/errorUtils.test.js** - Updated to use `DOMAIN_BLOCKED_ERROR_CODE` constant instead of locale-dependent string

8. **src/popup/__tests__/main.test.js** - Updated to expect `DOMAIN_BLOCKED` error code

9. **src/popup/__tests__/ublockImport.test.js** - Major test rework:
   - Removed old skip reasons
   - Added 46 tests for uBlock import functionality
   - Added comprehensive mocks
   - Documented architecture limitations

10. **src/popup/domainFilter.js** - Changed hardcoded Japanese error message to use `getMessage('saveError')`

11. **src/popup/errorUtils.js**:
    - Added `DOMAIN_BLOCKED_ERROR_CODE` constant
    - Changed `isDomainBlockedError` to ch

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -237,11 +237,9 @@
         <!-- Preview Section -->
         <div id="uBlockPreview" class="preview-section">
           <h4 data-i18n="loadPreview">Load Preview</h4>
-          <p data-i18n="ruleCount" data-i18n-args='{"count": ""}'>Rules: <span id="uBlockRuleCount">0</span></p>
-          <p data-i18n="exceptionCount" data-i18n-args='{"count": ""}'>Exceptions: <span
-              id="uBlockExceptionCount">0</span></p>
-          <p data-i18n="errorCount" data-i18n-args='{"count": ""}'>Errors: <span id="uBlockErrorCount"
-              class="error">0</span></p>
+          <p><span data-i18n="ruleCount" data-i18n-args='{"count": "0"}'>Rules: 0</span> <span id="uBlockRuleCount"></span></p>
+          <p><span data-i18n="exceptionCount" data-i18n-args='{"count": "0"}'>Exceptions: 0</span> <span id="uBlockExceptionCount"></span></p>
+          <p><span data-i18n="errorCount" data-i18n-args='{"count": "0"}'>Errors: 0</span> <span id="uBlockErrorCount" class="error"></span></p>
           <p id="uBlockErrorDetails" class="error-text text-sm"></p>
         </div>
 
@@ -330,8 +328,10 @@
       </div>
       <div class="modal-body">
         <p class="mt-0 text-xs text-gray" data-i18n="confirmContentDesc">
-          You can review and edit the content to be saved to Obsidian.<br>
-          <span class="text-danger">Note: Check masked items.</span>
+          You can review and edit the content to be saved to Obsidian.
+        </p>
+        <p class="mt-0 text-xs text-danger" data-i18n="confirmContentNote">
+          Note: Check masked items.
         </p>
         <div id="maskNavAnchor"></div>
         <textarea id="previewContent" class="preview-textarea"></textarea>
