Let me analyze the git diff to understand the changes and generate an appropriate conventional commit message.
Looking at the diff, I can see several major changes:

1. **CHANGELOG.md** - Updated with new features:
   - CSP (Content Security Policy) implementation
   - Error message sanitization to prevent information leakage
   - Message validation enhancement
   - Settings cache implementation
   - Mutex for Obsidian API conflict avoidance
   - Multiple new test files added

2. **manifest.json** -
   - Version updated from 2.4.0 to 2.4.1
   - Added Content Security Policy

3. **New test files**:
   - `obsidianClient-mutex.test.js` - Tests for Mutex locking mechanism
   - `obsidianClient-secure-fetch.test.js` - Tests for HTTPS enforcement
   - `recordingLogic-cache.test.js` - Tests for settings caching
   - `service-worker-message-validation.test.js` - Tests for message validation
   - `sanitizeError.test.js` - Tests for error message sanitization

4. **Modified files**:
   - `obsidianClient.js` - Added Mutex class for conflict avoidance
   - `recordingLogic.js` - Added settings caching mechanism
   - `errorUtils.js` - Exported `sanitizeErrorMessage` function
   - `popup.html` - Added CSP meta tag

The changes include:
- Security improvements (CSP, message validation, HTTPS enforcement)
- Performance improvements (settings caching)
- Reliability improvements (Mutex for concurrent writes)
- Error handling improvements (sanitize error messages)
- Extensive test coverage

This is primarily a release commit with multiple improvements. The version change (2.4.0 -> 2.4.1) indicates a PATCH release, which aligns with:
- fix: Bug fixes or error corrections
- But also includes perf, security, and test improvements

Looking at the types:
- `feat` - New features (caching, mutex, message validation, CSP)

- `fix` - Security vulnerabilities XSS fix mentioned in CHANGELOG
- `perf` - Settings caching for performance
- `test` - Multiple new test files
- `security` - Multiple secur

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self'; style-src 'self'; object-src 'none';">
   <title>Obsidian Smart History Settings</title>
   <link rel="stylesheet" href="styles.css">
 </head>
