fix(security): resolve XSS vulnerability in status panel and complete rebrand
Sanitize user inputs in status panel rendering with escapeHtml() to prevent
XSS attacks via domain filter patterns, Cache-Control headers, and timestamp
values. Complete remaining rebranding from Smart History to Obsidian Weave
in dashboard titles, locales, and console log prefixes.

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy"
     content="default-src 'none'; script-src 'self'; style-src 'self'; img-src 'self' chrome-extension: data:; object-src 'none';">
-  <title>Smart History Dashboard</title>
+  <title>Obsidian Weave</title>
   <link rel="stylesheet" href="dashboard.css">
 </head>
 
@@ -15,7 +15,7 @@
     <nav id="sidebar" class="sidebar" role="navigation" aria-label="Dashboard navigation">
       <div class="sidebar-header">
         <img src="../icons/icon48.png" alt="" aria-hidden="true" width="32" height="32">
-        <span class="sidebar-title" data-i18n="appTitle">Smart History</span>
+        <span class="sidebar-title" data-i18n="appTitle">Obsidian Weave</span>
       </div>
 
       <div class="sidebar-nav">
@@ -477,7 +477,7 @@
         <h2 class="panel-title" data-i18n="historyTab">History</h2>
 
         <p class="panel-description" data-i18n="historyDescription">
-          URLs recorded by Smart History. Use the search box to filter entries. Click × to delete an individual URL.
+          URLs recorded by Obsidian Weave. Use the search box to filter entries. Click × to delete an individual URL.
         </p>
         <p class="panel-description history-retention-note" data-i18n="historyRetentionPolicy">
           Shows records from the past 7 days (up to 10,000 entries). Older entries are automatically removed.
